--- a/HTML/style.css
+++ b/HTML/style.css
@@ -1,18 +1,26 @@
 * {
+  /* margin: 0;
+  padding: 0; */
   scroll-behavior: smooth;
+  text-decoration: none;
+}
+
+body {
+  margin: 0;
+  padding: 0;
 }
 
 .headerbody {
-
-  height: 10%;
+  width: 100%;
+  height: 4rem;
   margin: 0;
   background-color: rgb(192, 192, 192);
-  position: fixed;
+  position: sticky;
   top: 0;
 }
 
 .side_right {
-  margin-top: 9rem;
+  padding: 3rem;
 }
 
 header {
@@ -24,7 +32,8 @@ header {
 }
 
 button {
-  padding: 10px;
+  padding: 7px;
+  margin: 2px;
   border-radius: 10px;
 }
 
@@ -39,7 +48,7 @@ img {
 }
 
 a:link {
-  color: green;
+  /* color: green; */
   background-color: transparent;
   text-decoration: none;
 }
@@ -51,7 +60,7 @@ a:visited {
 }
 
 a:hover {
-  color: red;
+  /* color: red; */
   background-color: transparent;
   text-decoration: underline;
 }
@@ -84,7 +93,6 @@ td {
 
 .Attributes,
 .HTML_Elements,
-.lists,
 .Paragraphs,
 .Styles,
 .Text_Formatting,
@@ -116,4 +124,8 @@ td {
 
 .Comment_Tag {
   background-color: greenyellow;
+}
+
+.Styles {
+  background-color: hotpink;
 }
